--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
       @include('partials/about.html')
       @include('partials/benefits.html')
       @include('partials/trainers.html')
+      @include('partials/tariffs.html')
+      @include('partials/order.html')
     </main>
 
     @include('partials/footer.html')
